	--- 9.10.0-P1 released ---

3837.	[security]	A NULL pointer is passed to query_prefetch resulting
			a REQUIRE assertion failure when a fetch is actually
			initiated (CVE-2014-3214).  [RT #35899]

	--- 9.10.0 released ---

3824.	[bug]		A collision between two flag values could cause
			problems with cache cleaning when SIT was enabled.
			[RT #35858]

	--- 9.10.0rc2 released ---

3817.	[func]		The "delve" command is now spelled "delv" to avoid
			a namespace collision with the Xapian project.
			[RT #35801]

3815.	[doc]		Clarify "nsupdate -y" usage in man page. [RT #35808]

3810.	[bug]		Work around broken nameservers that fail to ignore
			unknown EDNS options. [RT #35766]

3809.	[doc]		Fix SIT and NSID documentation.

3808.	[doc]		Clean up "prefetch" documentation. [RT #35751]

3807.	[bug]		Fix sign extention bug in dns_name_fromtext when
			lowercase is set. [RT #35743]

3806.	[test]		Improved system test portability. [RT #35625]

3805.	[contrib]	Added contrib/perftcpdns, a performance testing tool
			for DNS over TCP. [RT #35710]

	--- 9.10.0rc1 released ---

3804.	[bug]		Corrected a race condition in dispatch.c in which
			portentry could be reset leading to an assertion
			failure in socket_search(). (Change #3708
			addressed the same issue but was incomplete.)
			[RT #35128]

3803.	[bug]		"named-checkconf -z" incorrectly rejected zones
			using alternate data sources for not having a "file"
			option. [RT #35685]

3802.	[bug]		Various header files were not being installed.

3801.	[port]		Fix probing for gssapi support on FreeBSD. [RT #35615]

3800.	[bug]		A pending event on the route socket could cause an
			assertion failure when shutting down named. [RT #35674]

3799.	[bug]		Improve named's command line error reporting.
			[RT #35603]

3798.	[bug]		'rndc zonestatus' was reporting the wrong re-signing
			time. [RT #35659]

3797.	[port]		netbsd: geoip support probing was broken. [RT #35642]

3796.	[bug]		Register dns and pkcs#11 error codes. [RT #35629]
