@@ -1,3 +1,6 @@
+3853.	[cleanup]	Refactor dns_rdataslab_fromrdataset to seperate out
+			the handling of a rdataset with no records. [RT #35968]
+
 	--- 9.10.0-P1 released ---
 
 3837.	[security]	A NULL pointer is passed to query_prefetch resulting
